--- a/home.pug
+++ b/home.pug
@@ -1,29 +1,23 @@
-extends template
+.banner
+    .banner-caption
+        h3 Your Design, We
+            span.blue  Deliver
+        p Suit Resizing
+        .slide-btn.mybtn
+            a Read more
+                i(aria-hidden='true').fa.fa-angle-double-right
 
-block title
-    title Stichery
+.aboutus
+    .head-aboutus
+        h2 Your Personal Tailor For Unique People Only
+        h3.boldh3 Welcome t<span class="underline">o our</span> <span class="blue">Stitchery</span>
+    .content-aboutus
+        .text-content
+            h4.articleh4 Why Custom Tailoring
+            p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s but also the leap into electronic typesetting dolor amet.
+            p Integer laoreet ultricies nunc, vitae eleifend elit rutrum sit amet. In elementum, magna id pellentesque auctor, risus dolor congue urna, nec dapibus eros magna a odio. Duis laoreet risus eget malesuada consequat. Nunc et tortor dignissim, laoreet est eget
+            a(href='servise.html') Servise info <i class="fa fa-angle-double-right" aria-hidden="true"></i>
 
-block content
-    .banner
-        .banner-caption
-            h3 Your Design, We
-                span.blue  Deliver
-            p Suit Resizing
-            .slide-btn
-                a(href='#') Read more
-                    i(aria-hidden='true').fa.fa-angle-double-right
-
-    .aboutus
-        .head-aboutus
-            h2 Your Personal Tailor For Unique People Only
-            h3.boldh3 Welcome t<span class="underline">o our</span> <span class="blue">Stitchery</span>
-        .content-aboutus
-            .text-content
-                h4.articleh4 Why Custom Tailoring
-                p Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s but also the leap into electronic typesetting dolor amet.
-                p Integer laoreet ultricies nunc, vitae eleifend elit rutrum sit amet. In elementum, magna id pellentesque auctor, risus dolor congue urna, nec dapibus eros magna a odio. Duis laoreet risus eget malesuada consequat. Nunc et tortor dignissim, laoreet est eget
-                a(href='servise.html') Servise info <i class="fa fa-angle-double-right" aria-hidden="true"></i>
-
-            .photo-content
-                img(src="img/ab.jpg")
-                img(src="img/ab2.jpg").abs
+        .photo-content
+            img(src="img/ab.jpg")
+            img(src="img/ab2.jpg").abs
