change menu link

--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,7 @@
 		text-decoration: none;
 		text-transform: uppercase;
 		letter-spacing: 0.7px;
+		cursor: pointer;
 	}
 
 	.menu>.active>a>p {
