change link class

--- a/template.pug
+++ b/template.pug
@@ -19,7 +19,7 @@ html
                 .head-menu
                     nav
                         ul.menu
-                            li(data-contentNumber='home.html').menu-item
+                            li(data-contentNumber='home.html').menu-item.active
                                 a
                                     p Home
                             li(data-contentNumber='servise.html').menu-item
@@ -63,11 +63,11 @@ html
                     h3 Links
                     ul
                         li
-                            a(href='home.html') Home
+                            a(href='#') Home
                         li
-                            a(href='servise.html') Servises
+                            a(href='#') Servises
                         li
-                            a(href='contact.html') Contact
+                            a(href='#') Contact
 
                 .footer-right.col-xs-12.col-sm-6.col-md-5.col-lg-5
                     h3 Newsletter
